# structlog_config

./: .gitignore  README.md  pyproject.toml
config/: logging.toml
src/: example.py  simple_test.py
src/structlog_config/: __init__.py  config.py  factory.py  handlers.py  log_levels.py  pattern_config.py
src/utils/: logging_config.py
tests/: simple_test.py
